lucene_parser.go
// Code generated from Lucene.g4 by ANTLR 4.7.1. DO NOT EDIT.

package lucene // Lucene
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'('", "')'", "'['", "']'", "':'", "'+'", "", "'*'", "", "'{'", "'}'",
	"", "", "'\"'", "'''", "'TO'",
}
var symbolicNames = []string{
	"", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COLON", "PLUS", "MINUS", "STAR",
	"QMARK", "LCURLY", "RCURLY", "CARAT", "TILDE", "DQUOTE", "SQUOTE", "TO",
	"AND", "OR", "NOT", "WS", "NUMBER", "DATE_TOKEN", "TERM_NORMAL", "TERM_TRUNCATED",
	"PHRASE", "PHRASE_ANYTHING", "OPERATOR", "ATOM", "MODIFIER", "TMODIFIER",
	"CLAUSE", "FIELD", "FUZZY", "BOOST", "QNORMAL", "QPHRASE", "QPHRASETRUNC",
	"QTRUNCATED", "QRANGEIN", "QRANGEEX", "QANYTHING", "QDATE",
}

var ruleNames = []string{
	"mainQ", "clauseDefault", "clauseOr", "clauseAnd", "clauseNot", "clauseBasic",
	"atom", "field", "value", "anything", "two_sided_range_term", "range_term",
	"range_value", "multi_value", "normal", "truncated", "quoted_truncated",
	"quoted", "modifier", "term_modifier", "boost", "fuzzy", "not_", "and_",
	"or_", "date", "sep",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type LuceneParser struct {
	*antlr.BaseParser
}

func NewLuceneParser(input antlr.TokenStream) *LuceneParser {
	this := new(LuceneParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Lucene.g4"

	return this
}

// LuceneParser tokens.
const (
	LuceneParserEOF             = antlr.TokenEOF
	LuceneParserLPAREN          = 1
	LuceneParserRPAREN          = 2
	LuceneParserLBRACK          = 3
	LuceneParserRBRACK          = 4
	LuceneParserCOLON           = 5
	LuceneParserPLUS            = 6
	LuceneParserMINUS           = 7
	LuceneParserSTAR            = 8
	LuceneParserQMARK           = 9
	LuceneParserLCURLY          = 10
	LuceneParserRCURLY          = 11
	LuceneParserCARAT           = 12
	LuceneParserTILDE           = 13
	LuceneParserDQUOTE          = 14
	LuceneParserSQUOTE          = 15
	LuceneParserTO              = 16
	LuceneParserAND             = 17
	LuceneParserOR              = 18
	LuceneParserNOT             = 19
	LuceneParserWS              = 20
	LuceneParserNUMBER          = 21
	LuceneParserDATE_TOKEN      = 22
	LuceneParserTERM_NORMAL     = 23
	LuceneParserTERM_TRUNCATED  = 24
	LuceneParserPHRASE          = 25
	LuceneParserPHRASE_ANYTHING = 26
	LuceneParserOPERATOR        = 27
	LuceneParserATOM            = 28
	LuceneParserMODIFIER        = 29
	LuceneParserTMODIFIER       = 30
	LuceneParserCLAUSE          = 31
	LuceneParserFIELD           = 32
	LuceneParserFUZZY           = 33
	LuceneParserBOOST           = 34
	LuceneParserQNORMAL         = 35
	LuceneParserQPHRASE         = 36
	LuceneParserQPHRASETRUNC    = 37
	LuceneParserQTRUNCATED      = 38
	LuceneParserQRANGEIN        = 39
	LuceneParserQRANGEEX        = 40
	LuceneParserQANYTHING       = 41
	LuceneParserQDATE           = 42
)

// LuceneParser rules.
const (
	LuceneParserRULE_mainQ                = 0
	LuceneParserRULE_clauseDefault        = 1
	LuceneParserRULE_clauseOr             = 2
	LuceneParserRULE_clauseAnd            = 3
	LuceneParserRULE_clauseNot            = 4
	LuceneParserRULE_clauseBasic          = 5
	LuceneParserRULE_atom                 = 6
	LuceneParserRULE_field                = 7
	LuceneParserRULE_value                = 8
	LuceneParserRULE_anything             = 9
	LuceneParserRULE_two_sided_range_term = 10
	LuceneParserRULE_range_term           = 11
	LuceneParserRULE_range_value          = 12
	LuceneParserRULE_multi_value          = 13
	LuceneParserRULE_normal               = 14
	LuceneParserRULE_truncated            = 15
	LuceneParserRULE_quoted_truncated     = 16
	LuceneParserRULE_quoted               = 17
	LuceneParserRULE_modifier             = 18
	LuceneParserRULE_term_modifier        = 19
	LuceneParserRULE_boost                = 20
	LuceneParserRULE_fuzzy                = 21
	LuceneParserRULE_not_                 = 22
	LuceneParserRULE_and_                 = 23
	LuceneParserRULE_or_                  = 24
	LuceneParserRULE_date                 = 25
	LuceneParserRULE_sep                  = 26
)

// IMainQContext is an interface to support dynamic dispatch.
type IMainQContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetClause returns the clause rule contexts.
	GetClause() IClauseDefaultContext

	// SetClause sets the clause rule contexts.
	SetClause(IClauseDefaultContext)

	// IsMainQContext differentiates from other interfaces.
	IsMainQContext()
}

type MainQContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	clause IClauseDefaultContext
}

func NewEmptyMainQContext() *MainQContext {
	var p = new(MainQContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LuceneParserRULE_mainQ
	return p
}

func (*MainQContext) IsMainQContext() {}

func NewMainQContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MainQContext {
	var p = new(MainQContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LuceneParserRULE_mainQ

	return p
}

func (s *MainQContext) GetParser() antlr.Parser { return s.parser }

func (s *MainQContext) GetClause() IClauseDefaultContext { return s.clause }

func (s *MainQContext) SetClause(v IClauseDefaultContext) { s.clause = v }

func (s *MainQContext) ClauseDefault() IClauseDefaultContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClauseDefaultContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IClauseDefaultContext)
}

func (s *MainQContext) AllSep() []ISepContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ISepContext)(nil)).Elem())
	var tst = make([]ISepContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ISepContext)
		}
	}

	return tst
}

func (s *MainQContext) Sep(i int) ISepContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISepContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ISepContext)
}

func (s *MainQContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MainQContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MainQContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuceneListener); ok {
		listenerT.EnterMainQ(s)
	}
}

func (s *MainQContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuceneListener); ok {
		listenerT.ExitMainQ(s)
	}
}

func (p *LuceneParser) MainQ() (localctx IMainQContext) {
	localctx = NewMainQContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, LuceneParserRULE_mainQ)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(55)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(54)
			p.Sep()
		}

	}
	{
		p.SetState(57)

		var _x = p.ClauseDefault()

		localctx.(*MainQContext).clause = _x
	}
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == LuceneParserWS {
		{
			p.SetState(58)
			p.Sep()
		}

	}

	return localctx
}

// IClauseDefaultContext is an interface to support dynamic dispatch.
type IClauseDefaultContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsClauseDefaultContext differentiates from other interfaces.
	IsClauseDefaultContext()
}

type ClauseDefaultContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClauseDefaultContext() *ClauseDefaultContext {
	var p = new(ClauseDefaultContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LuceneParserRULE_clauseDefault
	return p
}

func (*ClauseDefaultContext) IsClauseDefaultContext() {}

func NewClauseDefaultContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClauseDefaultContext {
	var p = new(ClauseDefaultContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LuceneParserRULE_clauseDefault

	return p
}

func (s *ClauseDefaultContext) GetParser() antlr.Parser { return s.parser }

func (s *ClauseDefaultContext) AllClauseOr() []IClauseOrContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IClauseOrContext)(nil)).Elem())
	var tst = make([]IClauseOrContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IClauseOrContext)
		}
	}

	return tst
}

func (s *ClauseDefaultContext) ClauseOr(i int) IClauseOrContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClauseOrContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IClauseOrContext)
}

func (s *ClauseDefaultContext) AllSep() []ISepContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ISepContext)(nil)).Elem())
	var tst = make([]ISepContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ISepContext)
		}
	}

	return tst
}

func (s *ClauseDefaultContext) Sep(i int) ISepContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISepContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ISepContext)
}

func (s *ClauseDefaultContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClauseDefaultContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClauseDefaultContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuceneListener); ok {
		listenerT.EnterClauseDefault(s)
	}
}

func (s *ClauseDefaultContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuceneListener); ok {
		listenerT.ExitClauseDefault(s)
	}
}

func (p *LuceneParser) ClauseDefault() (localctx IClauseDefaultContext) {
	localctx = NewClauseDefaultContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, LuceneParserRULE_clauseDefault)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(61)
		p.ClauseOr()
	}
	p.SetState(68)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			p.SetState(63)
			p.GetErrorHandler().Sync(p)

			if p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) == 1 {
				{
					p.SetState(62)
					p.Sep()
				}

			}
			{
				p.SetState(65)
				p.ClauseOr()
			}

		}
		p.SetState(70)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext())
	}

	return localctx
}

// IClauseOrContext is an interface to support dynamic dispatch.
type IClauseOrContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsClauseOrContext differentiates from other interfaces.
	IsClauseOrContext()
}

type ClauseOrContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClauseOrContext() *ClauseOrContext {
	var p = new(ClauseOrContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LuceneParserRULE_clauseOr
	return p
}

func (*ClauseOrContext) IsClauseOrContext() {}

func NewClauseOrContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClauseOrContext {
	var p = new(ClauseOrContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LuceneParserRULE_clauseOr

	return p
}

func (s *ClauseOrContext) GetParser() antlr.Parser { return s.parser }

func (s *ClauseOrContext) AllClauseAnd() []IClauseAndContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IClauseAndContext)(nil)).Elem())
	var tst = make([]IClauseAndContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IClauseAndContext)
		}
	}

	return tst
}

func (s *ClauseOrContext) ClauseAnd(i int) IClauseAndContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClauseAndContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IClauseAndContext)
}

func (s *ClauseOrContext) AllOr_() []IOr_Context {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IOr_Context)(nil)).Elem())
	var tst = make([]IOr_Context, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IOr_Context)
		}
	}

	return tst
}

func (s *ClauseOrContext) Or_(i int) IOr_Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IOr_Context)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IOr_Context)
}

func (s *ClauseOrContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClauseOrContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClauseOrContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuceneListener); ok {
		listenerT.EnterClauseOr(s)
	}
}

func (s *ClauseOrContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuceneListener); ok {
		listenerT.ExitClauseOr(s)
	}
}

func (p *LuceneParser) ClauseOr() (localctx IClauseOrContext) {
	localctx = NewClauseOrContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, LuceneParserRULE_clauseOr)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(71)
		p.ClauseAnd()
	}
	p.SetState(77)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(72)
				p.Or_()
			}
			{
				p.SetState(73)
				p.ClauseAnd()
			}

		}
		p.SetState(79)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 4, p.GetParserRuleContext())
	}

	return localctx
}

// IClauseAndContext is an interface to support dynamic dispatch.
type IClauseAndContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsClauseAndContext differentiates from other interfaces.
	IsClauseAndContext()
}

type ClauseAndContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClauseAndContext() *ClauseAndContext {
	var p = new(ClauseAndContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LuceneParserRULE_clauseAnd
	return p
}

func (*ClauseAndContext) IsClauseAndContext() {}

func NewClauseAndContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClauseAndContext {
	var p = new(ClauseAndContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LuceneParserRULE_clauseAnd

	return p
}

func (s *ClauseAndContext) GetParser() antlr.Parser { return s.parser }

func (s *ClauseAndContext) AllClauseNot() []IClauseNotContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IClauseNotContext)(nil)).Elem())
	var tst = make([]IClauseNotContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IClauseNotContext)
		}
	}

	return tst
}

func (s *ClauseAndContext) ClauseNot(i int) IClauseNotContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClauseNotContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IClauseNotContext)
}

func (s *ClauseAndContext) AllAnd_() []IAnd_Context {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IAnd_Context)(nil)).Elem())
	var tst = make([]IAnd_Context, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IAnd_Context)
		}
	}

	return tst
}

func (s *ClauseAndContext) And_(i int) IAnd_Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAnd_Context)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IAnd_Context)
}

func (s *ClauseAndContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClauseAndContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClauseAndContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuceneListener); ok {
		listenerT.EnterClauseAnd(s)
	}
}

func (s *ClauseAndContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuceneListener); ok {
		listenerT.ExitClauseAnd(s)
	}
}

func (p *LuceneParser) ClauseAnd() (localctx IClauseAndContext) {
	localctx = NewClauseAndContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, LuceneParserRULE_clauseAnd)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(80)
		p.ClauseNot()
	}
	p.SetState(86)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 5, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(81)
				p.And_()
			}
			{
				p.SetState(82)
				p.ClauseNot()
			}

		}
		p.SetState(88)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 5, p.GetParserRuleContext())
	}

	return localctx
}

// IClauseNotContext is an interface to support dynamic dispatch.
type IClauseNotContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsClauseNotContext differentiates from other interfaces.
	IsClauseNotContext()
}

type ClauseNotContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyClauseNotContext() *ClauseNotContext {
	var p = new(ClauseNotContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LuceneParserRULE_clauseNot
	return p
}

func (*ClauseNotContext) IsClauseNotContext() {}

func NewClauseNotContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ClauseNotContext {
	var p = new(ClauseNotContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LuceneParserRULE_clauseNot

	return p
}

func (s *ClauseNotContext) GetParser() antlr.Parser { return s.parser }

func (s *ClauseNotContext) AllClauseBasic() []IClauseBasicContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IClauseBasicContext)(nil)).Elem())
	var tst = make([]IClauseBasicContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IClauseBasicContext)
		}
	}

	return tst
}

func (s *ClauseNotContext) ClauseBasic(i int) IClauseBasicContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IClauseBasicContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IClauseBasicContext)
}

func (s *ClauseNotContext) AllNot_() []INot_Context {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*INot_Context)(nil)).Elem())
	var tst = make([]INot_Context, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(INot_Context)
		}
	}

	return tst
}

func (s *ClauseNotContext) Not_(i int) INot_Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*INot_Context)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(INot_Context)
}

func (s *ClauseNotContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ClauseNotContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ClauseNotContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuceneListener); ok {
		listenerT.EnterClauseNot(s)
	}
}

func (s *ClauseNotContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(LuceneListener); ok {
		listenerT.ExitClauseNot(s)
	}
}

func (p *LuceneParser) ClauseNot() (localctx IClauseNotContext) {
	localctx = NewClauseNotContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, LuceneParserRULE_clauseNot)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(89)
		p.ClauseBasic()
	}
	p.SetState(95)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 6, p.GetParserRuleContext())
